reserveAndCommit doesn't commit on MADVISE_FREE_REUSE systems https://bugs.webkit.org/show_bug.cgi?id=50588

Reviewed by Maciej Stachowiak.

* wtf/OSAllocatorPosix.cpp:
(WTF::OSAllocator::reserve):
(WTF::OSAllocator::reserveAndCommit):
(WTF::OSAllocator::commit): Tightened up some comments. Changed
reserveAndCommit to actually commit on MADVISE_FREE_REUSE systems.



Canonical link: https://commits.webkit.org/63823@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73405 268f45cc-cd09-0410-ab3c-d52691b4dbfc